option('use_codec_wave', type : 'feature', value : 'enabled')
option('use_codec_mp3', type : 'feature', value : 'auto')
option('use_codec_flac', type : 'feature', value : 'auto')
option('use_codec_vorbis', type : 'feature', value : 'auto')
option('use_codec_opus', type : 'feature', value : 'auto')
option('mp3_lib', type : 'combo', value : 'mad', choices: ['mad', 'mpg123'])
option('vorbis_lib', type : 'combo', value : 'vorbis', choices: ['vorbis', 'tremor'])
option('do_userdirs', type: 'feature', value : 'disabled')
